--- a/processing_data.ipynb
+++ b/processing_data.ipynb
@@ -52,7 +52,7 @@
     "                    'data/' + year + '/' + str((en_months.index(en_m) + 1)) + '_' + year + \"_\" + en_m.lower() + '.xml'\n",
     "                )\n",
     "\n",
-    "                filename = '/' + str((en_months.index(en_m) + 1)) + '_' + year + \"_\" + en_m.lower() + '.xml'\n",
+    "                filename = str((en_months.index(en_m) + 1)) + '_' + year + \"_\" + en_m.lower() + '.xml'\n",
     "        \n",
     "        # Filling list of paths for each XML file in each folder\n",
     "        if filename.endswith(\".xml\"): \n",
